--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
   position: relative;
   width: 250px;
   padding-top:15px;
+  cursor: pointer;
 }
 
 .box img {
@@ -62,3 +63,7 @@ body {
   margin: 0;
   box-shadow: 4px 4px 0px #d2d2d2;
 }
+.score{
+  height: 100vh;text-align: center;align-items: center;justify-content: center;display: flex;flex-direction: column;}
+  
+.score h1{margin:0}
